/*
boilerplate text in generated file header
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.phosae.x_kubernetes.api.transformation.v1beta1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/phosae/x-kubernetes/api/transformation/v1beta1";

// Base64 generates a base64 encoding for a specified Kubernetes object.
// Base64 is commonly implemented as a subresource for specific Kubernetes kind.
// For instance, you can find it used in the
// `/apis/hello.zeng.dev/v2/namespaces/default/foos/myfoo/base64` endpoint.
message Base64 {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional Base64Spec spec = 2;

  optional Base64Status status = 3;
}

message Base64Spec {
  // Path of the field to select in the specified object.
  // defaults to . for the entire object
  optional string fieldPath = 1;
}

message Base64Status {
  // Output is the base64-encoded representation of
  // the specified Kubernetes object or its subfield, as defined by the fieldPath.
  optional string output = 1;
}

